...
  @override
  Widget build(BuildContext context) {
    return ColorFiltered(
      colorFilter: ColorBlindMode(colorblindMode),
      child: Scaffold(
        appBar: AppBar(
          key: const Key("gdprBack"),
          centerTitle: true,
          title: Text(
            'GDPR',
            style: TextStyle(
              fontWeight: FontWeight.bold,
              fontSize: MediaQuery.of(context).size.width * 0.07 * fontSize,
...
